# trading_skills

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/skills/ib-account/scripts/: account.py
.claude/skills/ib-collar/scripts/: collar.py
.claude/skills/ib-find-short-roll/scripts/: roll.py
.claude/skills/ib-option-chain/: SKILL.md
.claude/skills/ib-option-chain/scripts/: options.py
.claude/skills/ib-pmcc-advisor/: SKILL.md
.claude/skills/ib-pmcc-advisor/scripts/: pmcc_advisor.py  report.py
.claude/skills/ib-pmcc-advisor/templates/: markdown-template.md
.claude/skills/ib-portfolio-action-report/scripts/: report.py
.claude/skills/ib-portfolio/scripts/: portfolio.py
.claude/skills/ib-report-delta-adjusted-notional-exposure/scripts/: delta_exposure.py
.claude/skills/ib-stop-loss/: SKILL.md
.claude/skills/ib-stop-loss/scripts/: stop_loss.py
.claude/skills/ib-trailing-stop/: SKILL.md
.claude/skills/scanner-pmcc/: SKILL.md
mcp_server/: server.py
src/trading_skills/: scanner_pmcc.py  utils.py
src/trading_skills/broker/: connection.py  futures.py  options.py  pmcc_advisor.py  portfolio.py  portfolio_action.py  roll.py  stop_loss.py  trailing_stop.py
tests/: conftest.py  test_broker_collar.py  test_broker_connection.py  test_broker_consolidate.py  test_broker_futures.py  test_broker_portfolio.py  test_broker_roll.py  test_ib_portfolio_action_report.py  test_markdown_to_pdf.py  test_massive_whales.py  test_pmcc_advisor.py  test_scanner_pmcc.py  test_spreads.py  test_stop_loss.py  test_trailing_stop.py  test_utils.py  test_whales_hunter.py
(+5 files in other folders)
