# ABOUTME: Project configuration for trading advisor agent.
# ABOUTME: Defines dependencies, scripts, and dev tools.

[project]
name = "trading-skills"
version = "0.1.10"
description = "AI-powered market analysis skills and MCP server for stock and options traders"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "yfinance>=0.2.50",
    "ib-async>=2.1.0",
    "pandas>=2.2",
    "numpy>=2.0",
    "pandas-ta>=0.3.14b0",
    "scipy>=1.14",
    "mcp>=1.25.0",
    "lxml>=6.0.2",
    "massive>=2.4.0",
    "pandas-market-calendars>=5.3.1.2",
    "plotly>=6.6.0",
]

[project.scripts]
trading-skills-mcp = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_skills", "mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["manual: requires live broker connection (deselected by default)"]
addopts = "-m 'not manual'"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0.0",
    "ruff>=0.8",
    "nbconvert>=7.17.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
]
